[package]
name = "better_image_viewer"
version = "0.1.0"
edition = "2024"

# Enable optimizations for dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3

[dependencies]
directories = "6.0.0"
eframe = "0.29.1"
image = { version = "0.25.9", features = ["webp"] }
rfd = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
winres = "0.1.12"
